--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <script src="js/asteroids.js" type="text/javascript"></script>
+
+
+  <canvas id="tutorial" width="600" height="600"></canvas>
+
+    <script src="js/asteroids.js" type="text/javascript"></script>
 </body>
 </html>
