--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <canvas id="tutorial" width="800" height="800"></canvas>
 
+  <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/asteroids.js" type="text/javascript"></script>
 </body>
 </html>
