--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 
   <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/asteroids.js" type="text/javascript"></script>
+<img id="spaceship" src="img/falcon.png">
 </body>
 </html>
