--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/asteroids.js" type="text/javascript"></script>
 <img id="spaceship" src="img/falcon.png">
+<img id="asteroid" src="img/asteroid.jpg">
 </body>
 </html>
