--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
   <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/asteroids.js" type="text/javascript"></script>
+    <div id="hidden-images">
 <img id="spaceship" src="img/falcon.png">
 <img id="asteroid" src="img/asteroid.jpg">
+</div>
 </body>
 </html>
