--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-
+<div id="canvas-container">
   <canvas id="tutorial" width="800" height="800"></canvas>
-
+</div>
   <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/asteroids.js" type="text/javascript"></script>
     <div id="hidden-images">
