--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <title>Asteroids
   </title>
   <link type="text/css" rel="stylesheet" href="css/style.css">
+  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
+  <div id="title">Not Asteroids - <span id="score"></span></div>
 <div id="canvas-container">
+
   <canvas id="tutorial" width="800" height="800"></canvas>
 </div>
+
   <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/asteroids.js" type="text/javascript"></script>
     <div id="hidden-images">
